Pequenas alterações nos layouts internos e criação do arquivo DatabaseHelper.java

--- a/app/src/main/res/layout/fragment_registered_movies.xml
+++ b/app/src/main/res/layout/fragment_registered_movies.xml
@@ -1,4 +1,12 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="com.myapp.linykerramos.omdbapp.MainActivity">
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,4 +18,16 @@
         android:layout_height="match_parent"
         android:text="@string/hello_registeredMovies_fragment" />
 
-</FrameLayout>
+
+
+</RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_menu_search" />
+
+</android.support.design.widget.CoordinatorLayout>
