adicionado biblioteca volley e implementação do adapter para os filmes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorDivider">#B6B6B6</color>
+    <color name="LightSkyBlue">#87CEFA</color>
+    <color name="LightSteelBlue">#B0C4DE</color>
 </resources>
