--- a/app/src/main/res/layout/fragment_registered_movies.xml
+++ b/app/src/main/res/layout/fragment_registered_movies.xml
@@ -12,11 +12,21 @@
     android:layout_height="match_parent"
     tools:context="com.myapp.linykerramos.omdbapp.RegisteredMovies">
 
+    <Button
+        android:id="@+id/botao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Texto"
+        />
+
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/texto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_registeredMovies_fragment" />
+        android:text="@string/hello_registeredMovies_fragment"
+        android:layout_below="@+id/botao"
+        />
 
 
 
