--- a/app/src/main/res/layout/fragment_search_movies.xml
+++ b/app/src/main/res/layout/fragment_search_movies.xml
@@ -1,13 +1,40 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.myapp.linykerramos.omdbapp.SearchMovies">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_searchMovies_fragment" />
 
-</FrameLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/LightSteelBlue"
+        android:id="@+id/edtBusca"
+        android:singleLine="true"
+        android:hint="@string/texto_nomeFilme">
+
+        <requestFocus/>
+    </EditText>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Buscar"
+        android:id="@+id/botaoBusca"
+        android:layout_below="@id/edtBusca"
+
+
+        />
+
+    <!-- TODO: Update blank fragment layout -->
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listaFilme"
+        android:layout_below="@id/botaoBusca"
+        >
+
+    </ListView>
+
+</RelativeLayout>
