--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorDivider">#B6B6B6</color>
     <color name="LightSkyBlue">#87CEFA</color>
     <color name="LightSteelBlue">#B0C4DE</color>
+    <color name="DodgerBlue">#1E90FF</color>
 </resources>
