--- a/app/src/main/res/layout/layout_listMovie.xml
+++ b/app/src/main/res/layout/layout_listMovie.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
-    android:background="@color/LightSkyBlue"
+    android:background="@color/aliceBlue"
     >
 
    <com.android.volley.toolbox.NetworkImageView
